--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "theia-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://github.com/manoelacs/Theia---Teste-de-front-end",
+  "homepage":"https://github.com/manoelacs/Theia---Teste-de-front-end",
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
